--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,34 @@ button.layout-toggle.active{
 }
 .grid3pic {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.row {
+    padding-bottom: 20px;
+}
+.post {
+    border-style: solid;
+    border-radius: 1%;
+    border-width: thin;
+    border-color: lightgrey;
+}
+.post-heading{
+    margin-top: 1em;
+}
+.post-heading-title{
+    float: left;
+}
+.post-heading-date{
+    float: right;
+    text-align: end;
+}
+.grid1pic {
+    width: 100%;
     height: auto;
     object-fit: fill;
+}
+.post-footer {
+    text-align: left;
+    margin-top: 1em;
 }
